<resources>
    <string name="app_name">VocabularyApp</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="word_to_translate">word to translate</string>
    <string name="insert_your_word">insert your word</string>
    <string name="submit">Submit</string>
    <string name="back_to_category">Back</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="category">Category</string>
    <string name="variable_english">Variable english</string>
    <string name="variable_polish">Variable polish</string>
    <string name="empty_edit_text">Fill empty field</string>

    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="tutorial_app">How to use app</string>
    <string name="tutorial_practise">Best practise</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="edit_variable">Edit variable</string>
    <string name="create_variable">Create variable</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_field">Input is empty. Try again</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure to delete?</string>

    <!-- Preference Titles -->
    <string name="game_header">Game</string>
    <string name="notification_header">Notification</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="difficulty_title">Default difficulty mode</string>

    <!-- Sync Preferences -->
    <string name="notification_title">Disable notifications</string>
    <string name="status">Status</string>
    <string name="reset">Reset</string>
    <string name="quiz">Quiz</string>
    <string name="write">Write</string>
    <string name="combine">Combine</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="word_list">Word list</string>
    <string name="statistic">Statistic</string>
    <string name="tutorials">Tutorials</string>
    <string name="do_nauczenia">To learn</string>
    <string name="w_trakcie_nauki">Learning</string>
    <string name="nauczone">Learned</string>
    <string name="defaultValueAmount">0</string>

</resources>