<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/game_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/difficulty_entries"
            app:entryValues="@array/difficulty_values"
            app:key="difficulty"
            app:title="@string/difficulty_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="notification"
            app:title="@string/notification_title"
            app:defaultValue = "false"/>

    </PreferenceCategory>

</PreferenceScreen>