<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="5dp"
    android:elevation="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vriable_eng"
            android:text="@string/variable_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/variable_pl"
            android:text="@string/variable_polish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/category"
            android:text="@string/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/status"
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>