<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticActivity"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/stat_to_learn"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:text="@string/do_nauczenia"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/to_learn_value"
        android:layout_width="97dp"
        android:layout_height="39dp"
        android:text="@string/defaultValueAmount"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/stat_learning"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:text="@string/w_trakcie_nauki"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/to_learning_value"
        android:layout_width="101dp"
        android:layout_height="42dp"
        android:text="@string/defaultValueAmount"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/stat_learnt"
        android:layout_width="177dp"
        android:layout_height="35dp"
        android:text="@string/nauczone"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="259dp" />

    <TextView
        android:id="@+id/learnt_value"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/defaultValueAmount"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="259dp" />

</LinearLayout>